--- a/config.toml
+++ b/config.toml
@@ -35,5 +35,7 @@ enableEmoji = true
     url = "/index.xml"
 
 [params]
+    author = "Tim Radtke"
+    dateFormat = "2006-01-02"
     description = "Minimize Regret is a blog written by Tim Radtke about data science and machine learning."
     footer = "&copy; Tim Radtke 2019 | [Github](https://www.github.com/timradtke) | [Twitter](https://www.twitter.com/timradtke)"
