--- a/config.toml
+++ b/config.toml
@@ -27,9 +27,13 @@ enableEmoji = true
     url = "/post/"
     weight = 3
 [[menu.main]]
+    name = "Paper Stack"
+    url = "/paper-stack/"
+    weight = 4
+[[menu.main]]
     name = "Twitter"
     url = "https://www.twitter.com/timradtke"
-    weight = 4
+    weight = 5
 [[menu.main]]
     name = "RSS"
     url = "/index.xml"
